--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Página 1</h1>
     <p>Esta é a primeira página.</p>
-    <a href="página2.html">Ir para a Página 2</a>
+    <a href="pagina2.html">Ir para a Página 2</a>
   </body>
 </html>
 
