--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Página</title>
+    <title> Página 1</title>
   </head>
   <body>
     <h1>Página 1</h1>
