--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>Esta é a primeira página.</p>
     <a href="pagina2.html">Ir para a Página 2</a><br>
     <img id="profile-image"
-      src=https://static.wikia.nocookie.net/ordemparanormal/images/0/02/Elizabeth_Webber_em_O_Segredo_na_Floresta.png/revision/latest?cb=20211213170812&path-prefix=pt-br
+      src="https://static.wikia.nocookie.net/ordemparanormal/images/0/02/Elizabeth_Webber_em_O_Segredo_na_Floresta.png/revision/latest?cb=20211213170812&path-prefix=pt-br">
   </body>
 </html>
 
