--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>Nessa epoca nicolas era feliz.</p>
     <a href="pagina2.html">Ir para a Página 2</a><br>
     <img id="profile-image"
-      src="https://static.wikia.nocookie.net/ordemparanormal/images/0/02/Elizabeth_Webber_em_O_Segredo_na_Floresta.png/revision/latest?cb=20211213170812&path-prefix=pt-br">
+      src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic.wikia.nocookie.net%2Fordemparanormal%2Fimages%2Fa%2Fa4%2FMiniatura_Elizabeth_em_O_Segredo_na_Floresta.png%2Frevision%2Flatest%2Fscale-to-width-down%2F200%3Fcb%3D20210127204320%26path-prefix%3Dpt-br&tbnid=TI1GEyMpu-mTXM&vet=12ahUKEwino-KG3aKCAxWBrZUCHTHcDHIQMygHegQIARBZ..i&imgrefurl=https%3A%2F%2Fordemparanormal.fandom.com%2Fwiki%2FElizabeth_Webber&docid=JTWMFpHbYx5a5M&w=134&h=308&q=liz%20op%20muito%20feliz&ved=2ahUKEwino-KG3aKCAxWBrZUCHTHcDHIQMygHegQIARBZ">
   </body>
 </html>
 
