--- a/pagina2.html
+++ b/pagina2.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Página 2</h1>
-    <p>agora ele tem depressao.</p>
+    <p>Esta é a segunda pagina.</p>
     <a href="index.html">Voltar para a Página 1</a>
   </body>
 </html>
